--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -25,5 +25,5 @@ jobs:
           pip install pytest
       - name: Run tests
         run: |
-          cd frontend
+          cd app
           pytest
