--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -7,7 +7,6 @@ on:
   push: 
     branches: [ main ]
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -34,8 +33,8 @@ jobs:
 
   docker: 
     needs: build
-    defaults:
-      run:
+    runs-on: ubuntu-latest
+    steps:
         - name: Check out the repo
           uses: actions/checkout@v3
 
