--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -10,6 +10,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./app
     timeout-minutes: 5
     strategy:
       matrix:
@@ -22,36 +25,44 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          cd app
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
       - name: Run tests
         run: |
-          cd app
           pytest
 
-  docker: 
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+  dockerhub:
+      name: Push Docker image to Docker Hub
+      runs-on: ubuntu-latest
+      needs: build
+      defaults:
+        run:
+          working-directory: ./app
+      steps:
         - name: Check out the repo
           uses: actions/checkout@v3
-
-        - name: Build and push
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          uses: docker/build-push-action@v3
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v2
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+          
+        - name: Log in to Docker Hub
+          uses: docker/login-action@v2
           with:
-            context: ./app
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Build and Push
+          run: |
+            docker build . --tag sarahaltowaity1/bookshare
+            docker push sarahaltowaity1/bookshare
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: docker
-    steps:
-      -
-        name: DigitalOcean App Platform Deployment
-        uses: digitalocean/app_action@main
-        with:
+    deploy:
+      runs-on: ubuntu-latest
+      needs: dockerhub
+      steps:
+        - name: DigitalOcean App Platform deployment
+          uses: digitalocean/app_action@main
+          with:
             app_name: bookshare-app
             token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
