--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.10.8
 
 # expose port 3000 to outside of container
-EXPOSE 5000
+EXPOSE 3000
 # set working dir within image
 WORKDIR /app
 
@@ -14,4 +14,4 @@ RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 # run web app
-CMD flask run -h 0.0.0.0 -p 3000s
+CMD flask run -h 0.0.0.0 -p 3000
