--- a/.github/workflows/docker-cd.yaml
+++ b/.github/workflows/docker-cd.yaml
@@ -1,45 +1,56 @@
-name: Build Image/CD
+name: App CD
 
 on: 
   pull_request:
-    branches: ['main']
+    branches: [ main ]
+
+  push: 
+    branches: [ main ]
 
 jobs:
-  build-app:
+  build:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    strategy:
+      matrix:
+        python-version: ["3"]
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with: 
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          cd app
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+      - name: Run tests
+        run: |
+          cd app
+          pytest
+  docker: 
+    needs: build
+    defaults:
+      run:
+        - name: Check out the repo
+          uses: actions/checkout@v3
+
+        - name: Build and push
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          context: ./app
-          file: app/Dockerfile
-          tags: saraha/bookshare:latest
+          uses: docker/build-push-action@v3
+          with:
+            context: ./app
 
-  deploy-app:
+  deploy:
     runs-on: ubuntu-latest
-    needs: build-app
-
+    needs: docker
     steps:
-    - name: DigitalOcean Platform Deployment
-      uses: digitalocean/app_action@main
-      with:
-        app_name: bookshare
-        token: ${{ secrets.DIGITALOCEAN_API_KEY  }} 
-    
+      -
+        name: DigitalOcean App Platform Deployment
+        uses: digitalocean/app_action@main
+        with:
+            app_name: bookshare-app
+            token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
