--- a/.github/workflows/docker-cd.yaml
+++ b/.github/workflows/docker-cd.yaml
@@ -2,10 +2,10 @@ name: App CD
 
 on: 
   pull_request:
-    branches: [ main ]
+    branches: [ 'main' ]
 
   push: 
-    branches: [ main ]
+    branches: ['main']
 
 jobs:
   build:
