--- a/.github/workflows/docker-cd.yaml
+++ b/.github/workflows/docker-cd.yaml
@@ -11,15 +11,30 @@ jobs:
   docker: 
       runs-on: ubuntu-latest
       steps:
+        - name: Checkout
+          uses: actions/checkout@v3
+
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v2
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+
         - name: Check out the repo
           uses: actions/checkout@v3
 
+        - name: Login to Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
         - name: Build and push
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
           uses: docker/build-push-action@v3
           with:
+            file: ./app/Dockerfile
             context: ./app
+            push: true
 
   deploy:
     runs-on: ubuntu-latest
@@ -31,5 +46,4 @@ jobs:
         with:
             app_name: bookshare-app
             token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-    
     
