--- a/.github/workflows/docker-cd.yaml
+++ b/.github/workflows/docker-cd.yaml
@@ -35,6 +35,7 @@ jobs:
             file: ./app/Dockerfile
             context: ./app
             push: true
+            tag: sarahaltowaity1/bookshare:latest
 
   deploy:
     runs-on: ubuntu-latest
