changed target digitalocean name

--- a/.github/workflows/docker-cd.yaml
+++ b/.github/workflows/docker-cd.yaml
@@ -45,6 +45,6 @@ jobs:
         name: DigitalOcean App Platform Deployment
         uses: digitalocean/app_action@main
         with:
-            app_name: bookshare-app
+            app_name: bookshares-app
             token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     
