--- a/.github/workflows/docker-cd.yaml
+++ b/.github/workflows/docker-cd.yaml
@@ -38,10 +38,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker
     steps:
-      -
-        name: DigitalOcean App Platform Deployment
+      - name: DigitalOcean App Platform Deployment
         uses: digitalocean/app_action@main
         with:
-            app_name: bookshares-app
+            app_name: bookshare
             token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-    
